--- a/src/components/common/Header.astro
+++ b/src/components/common/Header.astro
@@ -1,8 +1,9 @@
 ---
+import { Image } from "astro:assets";
 import Logo from "@/components/common/Logo.astro";
-import bag2 from "@/assets/icons/bag-2.svg?url";
-import user from "@/assets/icons/user.svg?url";
-import menu from "@/assets/icons/menu.svg?url";
+import bag2 from "@/assets/icons/bag-2.svg";
+import user from "@/assets/icons/user.svg";
+import menu from "@/assets/icons/menu.svg";
 
 // Datos para el menú de navegación
 const navItems = [
@@ -34,7 +35,7 @@ const navItems = [
       <!-- Iconos de usuario y carrito -->
       <div class="flex items-center space-x-4">
         <a href="/cart" class="text-gray-600 hover:text-primary-500 relative">
-          <img src={bag2} alt="bag" class="h-6 w-auto" />
+          <Image src={bag2} alt="bag" class="h-6 w-auto" />
           <span
             id="cart-count"
             class="absolute -top-2 -right-2 bg-primary-500 text-white text-xs rounded-full h-5 w-5 flex items-center justify-center"
@@ -44,7 +45,7 @@ const navItems = [
         </a>
 
         <a href="/account" class="text-gray-600 hover:text-primary-600">
-          <img src={user} alt="user" class="h-6 w-auto" />
+          <Image src={user} alt="user" class="h-6 w-auto" />
         </a>
 
         <!-- Botón de menú móvil -->
@@ -52,7 +53,7 @@ const navItems = [
           id="mobile-menu-button"
           class="md:hidden text-gray-600 hover:text-primary-600"
         >
-          <img src={menu} alt="menu" class="h-8 w-auto" />
+          <Image src={menu} alt="menu" class="h-8 w-auto" />
         </button>
       </div>
     </div>
