feat: :sparkles: Ajustar el diseño del componente Hero y mejorar la disposición del campo de búsqueda

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -8,7 +8,7 @@ import SketchAnnotation from "@/assets/icons/sketch-annotation.svg";
 
 <section class="container mx-auto">
   <!-- Title and Paragraph -->
-  <div class="relative container mx-auto px-4 py-8 lg:py-20">
+  <div class="relative container mx-auto px-4 py-8 lg:py-20 md:mb-10">
     <div class="max-w-2xl mx-auto text-center">
       <p class="relative text-2xl lg:text-5xl font-extrabold text-title-950">
         Discover Furniture With High Quality Wood
@@ -32,9 +32,11 @@ import SketchAnnotation from "@/assets/icons/sketch-annotation.svg";
   </div>
 
   <!-- Search -->
-  <div class="z-10 container mx-auto px-4 py-24 lg:py-32">
+  <div class="container mx-auto px-4">
     <div class="relative max-w-auto mx-auto text-center">
-      <div class="absolute -top-10 left-2/6 max-w-2xl mx-auto z-50">
+      <div
+        class="lg:absolute lg:-top-10 lg:left-1/2 lg:transform lg:-translate-x-1/2 lg:max-w-[900px] md:w-full mx-auto mb-7"
+      >
         <Search />
       </div>
       <Image
