feat: :sparkles: Mejorar el diseño del componente de búsqueda ajustando tamaños y espaciados

--- a/src/components/common/Search.astro
+++ b/src/components/common/Search.astro
@@ -3,14 +3,12 @@
 ---
 
 <div
-  class="flex items-center p-4 h-20 w-full max-w-3xl mx-auto border border-gray-300 overflow-hidden shadow-sm"
+  class="flex items-center p-4 h-14 w-full max-w-3xl md:max-w-full md:h-20 mx-auto bg-white border border-gray-300 overflow-hidden"
 >
-  <div class="flex items-center justify-center pl-3">
+  <div class="flex items-center justify-center pl-0 md:pl-2">
     <svg
       xmlns="http://www.w3.org/2000/svg"
-      class="h-8 w-8 text-gray-400"
-      width="24"
-      height="24"
+      class="h-6 w-6 md:w-8 md:h-8 text-gray-400"
       viewBox="0 0 24 24"
       fill="none"
       stroke="currentColor"
@@ -25,10 +23,10 @@
   <input
     type="text"
     placeholder="Search property"
-    class="flex-grow px-4 py-2 focus:outline-none"
+    class="flex-grow focus:outline-none"
   />
   <button
-    class="bg-primary-500 text-white px-4 py-2 font-medium hover:bg-primary/90 transition-colors w-44 h-14"
+    class="bg-primary-500 text-white text-base md:px-2 md:py-2 w-26 h-9 md:w-44 md:h-14 font-medium hover:bg-primary/90 transition-colors"
   >
     Search
   </button>
