feat: :sparkles: Agregar componente PopularProducts con carrusel y mejorar el diseño del componente ProductCard

--- a/src/components/common/Header.astro
+++ b/src/components/common/Header.astro
@@ -51,9 +51,13 @@ const navItems = [
         <!-- Botón de menú móvil -->
         <button
           id="mobile-menu-button"
-          class="md:hidden text-gray-600 hover:text-primary-600"
+          class="md:hidden text-gray-600 hover:text-primary-600 hover:cursor-pointer"
         >
-          <Image src={menu} alt="menu" class="h-8 w-auto" />
+          <Image
+            src={menu}
+            alt="menu"
+            class="h-8 w-auto hover:cursor-pointer"
+          />
         </button>
       </div>
     </div>
