--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -178,6 +178,10 @@ const featuredProducts = [
 <MainLayout title="Inicio">
   <Hero />
   <Benefits />
-  <PopularProducts />
-  <FeaturedProducts title="Productos Destacados" products={featuredProducts} />
+  <PopularProducts
+    title="Product"
+    description="Our popular product"
+    paragraph="Pellentesque etiam blandit in tincidunt at donec. Eget ipsum dignissim placerat nisi, adipiscing mauris non purus parturient."
+    products={featuredProducts}
+  />
 </MainLayout>
